k8s/base/imgproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
  labels:
    app: imgproxy
    component: image-processor
    app.kubernetes.io/name: imgproxy
    app.kubernetes.io/component: image-processor
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "imgproxy-backendconfig"}'
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 8081
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: imgproxy
    component: image-processor
  sessionAffinity: None
